--- a/HeroesOfPymoli_Final.ipynb
+++ b/HeroesOfPymoli_Final.ipynb
@@ -1289,7 +1289,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Trend 1: Heroes principle audience is males players between the ages of 20-24. \n",
+    "Trend 2: Heroes best selling items does not equate the to the most profitible item. \n",
+    "Trend 3: Players between 15-24 spend the most money per player in the game. \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
